sonar suggested changes in cli